<resources>
    <string name="app_name" translatable="true">Wanicchou</string>

    <!--search activity-->
    <string name="settings_action_label" translatable="true">Settings</string>

    <!--vocabulary_information related-->
    <string name="search_label" translatable="true">Search</string>
    <string name="search_field_hint" translatable="true">Enter a word</string>

    <string name="word_label" translatable="true">Word</string>
    <string name="word_hint" translatable="true">単語</string>

    <string name="definition_label" translatable="true">Definition</string>
    <string name="definition_hint" translatable="true">Nothing searched yet!</string>

    <string name="word_searching" translatable="true">Searching for %1$s…</string>
    <string name="word_search_success" translatable="true">%1$s found on %2$s!</string>
    <string name="word_search_failure" translatable="true">%1$s not found!</string>

    <!--anki_additional_fields-->
    <string name="context_label" translatable="true">Context</string>
    <string name="context_hint" translatable="true">Where is it found?</string>

    <string name="notes_label" translatable="true">Notes</string>
    <string name="notes_hint" translatable="true">Extras/Mnemonic</string>

    <!--fab related-->
    <string name="fab_btn_label" translatable="true">Send to Anki</string>

    <string name="related_words_btn_label" translatable="true">Go to related words</string>

    <!--Toast strings-->
    <string name="permissions_denied_toast" translatable="true">Permissions denied.</string>
    <string name="anki_added_toast" translatable="true">%1$s sent to AnkiDroid.</string>
    <string name="searching_related_toast" translatable="true">Searching for selected word…</string>
    <string name="toast_pitch" translatable="true">Pitch: %1$s</string>


    <!--related words activity-->
    <string name="activity_word_list_title" translatable="true">Results</string>




    <!--settings strings-->
    <string name="search_settings_category_title" translatable="true">Search Settings</string>
    <string name="pref_dictionary_type_title" translatable="true">Dictionary Type</string>
    <string name="pref_match_type_title" translatable="true">Match Type</string>

    <string name="pref_auto_delete_title" translatable="true">Auto-Deletion</string>
    <string name="pref_auto_save_title" translatable="true">Auto-Save</string>
    <string name="pref_word_language_title" translatable="true">Vocabulary Language</string>
    <string name="pref_definition_language_title">Definition Language</string>

    <string name="pref_dictionary_title" translatable="true">Dictionary</string>

    <string name="pronunciation_hint">Pronunciation</string>
    <string name="pitch_hint">Pitch</string>
    <string name="dictionary_hint">Dictionary</string>

    <string name="title_selected">%1$d words selected</string>
    <string name="action_db_delete">Delete</string>
    <string name="action_db_import">Import</string>
    <string name="database_title">Database</string>
    <string name="lbl_definition_header_text" translatable="true">Definition</string>
    <string name="lbl_word_button_text">Word</string>
    <string name="lbl_related_button_text" translatable="true">Related</string>
    <string name="lbl_word_default_text" translatable="false">わにっちょう</string>
    <string name="lbl_kanji_default_text" translatable="false">和日帳</string>

    <!-- shared -->
    <string name="edit_note_title" translatable="true">Edit note</string>
    <string name="save_button_text" translatable="true">Save</string>
    <string name="delete_button_text" translatable="true">Delete</string>
    <string name="add_button_text" translatable="true">Add</string>

    <!-- definition noteText fragment -->
    <string name="definition_note_title" translatable="true">Definition Note</string>
    <string name="add_definition_note_title" translatable="true">Add Definition Note</string>

    <!-- settings fragment -->
    <string name="dictionary_title" translatable="true">Dictionary</string>
    <string name="dictionary_match_type_title" translatable="true">Dictionary Match Type</string>
    <string name="database_match_type_title" translatable="true">Database Match Type</string>
    <string name="auto_delete_title" translatable="true">Auto Delete</string>
    <string name="vocab_language_title" translatable="true">Vocabulary Language</string>
    <string name="definition_language_title" translatable="true">Definition Language</string>

    <!-- tag fragment -->
    <string name="tags_title">Tags</string>
    <string name="edit_tag_title" translatable="true">Edit tag</string>
    <string name="add_tag_title" translatable="true">Add Tag</string>

    <!-- vocabulary noteText fragment -->
    <string name="vocab_notes_title" translatable="true">Vocabulary Notes</string>
    <string name="add_vocab_note_title" translatable="true">Add Vocabulary Note</string>
    <string name="toast_no_network" translatable="true">No network connection and search was not in database.</string>
    <string name="lbl_fragment_vocabulary_notes_title">Vocabulary Notes</string>
    <string name="lbl_fragment_definition_note_title">Definition Note</string>
    <string name="lbl_fragment_tag_title">Tags</string>
    <string name="toast_anki_storage_permission_required" translatable="true">AnkiDroid must granted external storage permissions first.</string>
    <string name="edit_definition_title">Edit Definition</string>
</resources>
