<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--word definition start-->
        <com.lb.auto_fit_textview.AutoResizeTextView
            android:id="@+id/tv_word"
            tools:text="@string/word_hint"
            android:text="@string/word_hint"
            android:textAlignment="center"
            android:background="@drawable/border"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="60sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_reading"
            tools:text="@string/pronunciation_hint"
            android:text="@string/pronunciation_hint"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/tv_word"
            app:layout_constraintLeft_toLeftOf="@id/tv_word"
            app:layout_constraintRight_toRightOf="@id/tv_word"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_pitch"
            tools:text="@string/pitch_hint"
            android:text="@string/pitch_hint"
            android:textAlignment="center"
            android:background="@drawable/border"
            app:layout_constraintTop_toTopOf="@id/tv_reading"
            app:layout_constraintBottom_toBottomOf="@id/tv_reading"
            app:layout_constraintLeft_toLeftOf="@id/tv_word"
            android:textSize="20sp"
            android:padding="6dp"
            android:layout_margin="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_dictionary"
            tools:text="@string/dictionary_hint"
            android:text="@string/dictionary_hint"
            android:textAlignment="center"
            android:background="@drawable/border"
            app:layout_constraintTop_toTopOf="@id/tv_reading"
            app:layout_constraintBottom_toBottomOf="@id/tv_reading"
            app:layout_constraintRight_toRightOf="@id/tv_word"
            android:textSize="20sp"
            android:padding="6dp"
            android:layout_margin="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ViewSwitcher
            android:id="@+id/vs_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureAllChildren="false"
            app:layout_constraintTop_toBottomOf="@id/tv_word"
            android:background="@drawable/border"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" >
            <!--app:layout_constraintLeft_toLeftOf="@id/tv_definition_label"-->
            <!--app:layout_constraintRight_toRightOf="@id/tv_definition_label"-->
            <!--app:layout_constraintTop_toBottomOf="@id/tv_definition_label"-->
            <TextView
                android:id="@+id/tv_definition"
                android:hint="@string/definition_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"/>
            <EditText
                android:id="@+id/et_definition"
                android:inputType="text"
                android:hint="@string/definition_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ViewSwitcher>
        <!--word definition end-->
    </android.support.constraint.ConstraintLayout>
</layout>