<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >
    <android.support.constraint.ConstraintLayout
        android:id="@+id/view_anki_fields"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tv_context_label"
            tools:text="@string/context_label"
            android:text="@string/context_label"
            android:clickable="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_search_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

        <ViewSwitcher
            android:id="@+id/vs_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tv_context_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_context_label"
            android:measureAllChildren="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" >
            <TextView
                android:id="@+id/tv_context"
                android:hint="@string/context_hint"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_context"
                android:hint="@string/context_hint"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </ViewSwitcher>

        <TextView
            android:id="@+id/tv_notes_label"
            tools:text="@string/notes_label"
            android:text="@string/notes_label"
            android:clickable="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_context_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <ViewSwitcher
            android:id="@+id/vs_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tv_notes_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_notes_label"
            android:measureAllChildren="false"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" >

            <TextView
                android:id="@+id/tv_notes"
                android:hint="@string/notes_hint"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_notes"
                android:hint="@string/notes_hint"
                android:inputType="textMultiLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </ViewSwitcher>

    </android.support.constraint.ConstraintLayout>
</layout>